Fix #111142: bl_static_type is empty for node groups and custom nodes

Caused by f18c45eb6968cf469e1e205e8cc2bf8ed8cb1ecf.
Functions `node_type_base` and `node_type_base_custom`
are the same, but last one have been missed in the cleanup.

Pull Request: https://projects.blender.org/blender/blender/pulls/111154